src/tests/identifier_expression/snapshots/monkey_interpreter__tests__identifier_expression__test_identifier_expression_case_4_evaluation.snap
---
source: src/tests/identifier_expression/mod.rs
expression: evaluation
---
Function {
    parameters: [
        "x",
        "y",
    ],
    block: Block {
        nodes: [
            Expression {
                expression: Infix {
                    left_hand: Identifier {
                        identifier: "x",
                    },
                    operator: Plus,
                    right_hand: Identifier {
                        identifier: "y",
                    },
                },
            },
        ],
    },
    ..
}
