src/tests/identifier_expression/snapshots/monkey_interpreter__tests__identifier_expression__test_identifier_expression_case_6_lexical_analysis.snap
---
source: src/tests/identifier_expression/mod.rs
assertion_line: 51
expression: tokens
---
[
    PositionedToken {
        token: Let,
        position: Position {
            line: 1,
            column: 1,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "a",
        },
        position: Position {
            line: 1,
            column: 5,
        },
    },
    PositionedToken {
        token: Assign,
        position: Position {
            line: 1,
            column: 7,
        },
    },
    PositionedToken {
        token: Integer {
            literal: 25,
        },
        position: Position {
            line: 1,
            column: 9,
        },
    },
    PositionedToken {
        token: SemiColon,
        position: Position {
            line: 1,
            column: 11,
        },
    },
    PositionedToken {
        token: Let,
        position: Position {
            line: 2,
            column: 1,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "b",
        },
        position: Position {
            line: 2,
            column: 5,
        },
    },
    PositionedToken {
        token: Assign,
        position: Position {
            line: 2,
            column: 7,
        },
    },
    PositionedToken {
        token: Integer {
            literal: 91,
        },
        position: Position {
            line: 2,
            column: 9,
        },
    },
    PositionedToken {
        token: SemiColon,
        position: Position {
            line: 2,
            column: 11,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "b",
        },
        position: Position {
            line: 3,
            column: 1,
        },
    },
]
