src/tests/identifier_expression/snapshots/monkey_interpreter__tests__identifier_expression__test_identifier_expression_case_6_syntax_analysis.snap
---
source: src/tests/identifier_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Statement {
        statement: Let {
            identifier: "a",
            expression: Integer {
                literal: 25,
            },
        },
    },
    Statement {
        statement: Let {
            identifier: "b",
            expression: Integer {
                literal: 91,
            },
        },
    },
    Expression {
        expression: Identifier {
            identifier: "b",
        },
    },
]
